# rzip

./: .gitignore  .pylintrc  CONTRIBUTE.md  README.md  dev-requirements.txt  pyproject.toml  pytest.ini
.github/workflows/: build.yaml  build_triggers.yaml  release.yaml
src/rzip/: __init__.py  __main__.py
tests/: init_test.py  main_test.py
