[project]
name = "rzip"
dynamic = ['version']
license = {file = "LICENSE"}
readme = "README.md"
authors = [
  { name="Ayowel", email="ayowel@users.noreply.github.com" },
]
description = "Reproducible zip build utility"
requires-python = ">=3.0"
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/ayowel/rzip"
Issues = "https://github.com/ayowel/rzip/issues"

[project.scripts]
rzip = "rzip.__main__:main"

[tool.setuptools.dynamic]
version = {attr = 'rzip.__version__'}

[project.optional-dependencies]
dev = [
    "pylint >=2.15.5,<3.0.0",
    "pytest >=7.2.0,<8.0.0",
    "pytest-cov >=5.0.0,<6.0.0",
    "build",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
